staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 11:38:05.</p>
+<p>Last compiled Friday, March 14, 2014 - 11:39:58.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -310,8 +310,7 @@ To request a discount, which actually pays the whole price for 10 private reposi
 for qualified faculty, click on the request a discount at 
 <a href="https://education.github.com">https://education.github.com</a>.  A step-by-step guide 
 for setting up your GitHub organization for classroom use can be found at 
-<a href="https://education.github.com/guide">https://education.github.com/guide</a>.<br/>
-Free private repositories for anyone can be created at 
+<a href="https://education.github.com/guide">https://education.github.com/guide</a>.   Free private repositories for anyone can be created at 
 <a href="https://bitbucket.org">https://bitbucket.org</a>.  Bitbucket, like GitHub, is a web 
 based hosting service that uses the Git revision control system.</p>
 
@@ -428,8 +427,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 7d2989d] staging all files
- 3 files changed, 244 insertions(+), 28 deletions(-)
+<pre><code>[master e3e27af] staging all files
+ 3 files changed, 52 insertions(+), 41 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -481,7 +480,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 7d2989dc3d552738930dbca7029083e4b7c03376
+<pre><code>commit e3e27af1a9cee6d2af0cbecf9288668e54f6ed2c
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 11:39:58 2014 -0400
+
+    staging all files
+
+commit 7d2989dc3d552738930dbca7029083e4b7c03376
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:38:05 2014 -0400
 
@@ -492,12 +497,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:20:12 2014 -0400
 
     staging all files
-
-commit 8539d488fd676b8bfcfc098a1bba79995c12f804
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 11:10:38 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -505,9 +504,9 @@ Date:   Fri Mar 14 11:10:38 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>7d2989dc3d552738930dbca7029083e4b7c03376 staging all files
+<pre><code>e3e27af1a9cee6d2af0cbecf9288668e54f6ed2c staging all files
+7d2989dc3d552738930dbca7029083e4b7c03376 staging all files
 8e60a7cb925209ffdcd650bc031753d63d0e946a staging all files
-8539d488fd676b8bfcfc098a1bba79995c12f804 staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -515,9 +514,9 @@ Date:   Fri Mar 14 11:10:38 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>7d2989d Fri Mar 14 11:38:05 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>e3e27af Fri Mar 14 11:39:58 2014 -0400- staging all files [Alan Arnholt]
+7d2989d Fri Mar 14 11:38:05 2014 -0400- staging all files [Alan Arnholt]
 8e60a7c Fri Mar 14 11:20:12 2014 -0400- staging all files [Alan Arnholt]
-8539d48 Fri Mar 14 11:10:38 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -525,7 +524,13 @@ Date:   Fri Mar 14 11:10:38 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>7d2989d Fri Mar 14 11:38:05 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>e3e27af Fri Mar 14 11:39:58 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  3 +--
+ Git/GitOne.html | 48 +++++++++++++++++++++++++++---------------------
+ Git/GitOne.md   | 42 ++++++++++++++++++++++++------------------
+ 3 files changed, 52 insertions(+), 41 deletions(-)
+
+7d2989d Fri Mar 14 11:38:05 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |   8 ++-
  Git/GitOne.html |  59 +++++++++-------
  Git/GitOne.md   | 205 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-
@@ -536,12 +541,6 @@ Date:   Fri Mar 14 11:10:38 2014 -0400
  Git/GitOne.html |  66 +++++++++++--------
  Git/GitOne.md   | 198 ++++----------------------------------------------------
  3 files changed, 63 insertions(+), 217 deletions(-)
-
-8539d48 Fri Mar 14 11:10:38 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  | 27 +++++++++++++++++++++------
- Git/GitOne.html | 47 +++++++++++++++++++++++++++--------------------
- Git/GitOne.md   | 44 +++++++++++++++++++++++++++-----------------
- 3 files changed, 75 insertions(+), 43 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
