--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 11:41:21.</p>
+<p>Last compiled Friday, March 14, 2014 - 11:41:49.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -376,6 +376,8 @@ your computer, you need to &ldquo;clone&rdquo; the GitHub repo to your computer.
 is a subfolder of my <em>USERNAME</em> directory.   If you clone a remote repository 
 to your machine, you will not need to initialize your directory.</p>
 
+<h3>Forking  a Repo</h3>
+
 <p>Another common way to clone a repo is my first &ldquo;forking&rdquo; someone else&#39;s repo.   Forking a repo creates a remote (GitHub or Bitbucket) copy of the forked repo.   To work on the forked repo, you first must clone the remote fork to your local  machine.  When a repository is cloned, it has a default remote called <code>origin</code> that points to your fork on GitHub, not the original repository it was forked from.</p>
 
 <p>One way to clone this repo using <code>RStudio</code> is  to click on File -&gt; New Project </p>
@@ -422,8 +424,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master dea131d] staging all files
- 3 files changed, 42 insertions(+), 49 deletions(-)
+<pre><code>[master a3e774d] staging all files
+ 3 files changed, 42 insertions(+), 51 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -475,7 +477,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit dea131d27e1f05c2d9ac9fcf190b79592e123181
+<pre><code>commit a3e774d572f7bf02434a9eb5c62ed043ef5165eb
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 11:41:49 2014 -0400
+
+    staging all files
+
+commit dea131d27e1f05c2d9ac9fcf190b79592e123181
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:41:21 2014 -0400
 
@@ -486,12 +494,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:39:58 2014 -0400
 
     staging all files
-
-commit 7d2989dc3d552738930dbca7029083e4b7c03376
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 11:38:05 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -499,9 +501,9 @@ Date:   Fri Mar 14 11:38:05 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>dea131d27e1f05c2d9ac9fcf190b79592e123181 staging all files
+<pre><code>a3e774d572f7bf02434a9eb5c62ed043ef5165eb staging all files
+dea131d27e1f05c2d9ac9fcf190b79592e123181 staging all files
 e3e27af1a9cee6d2af0cbecf9288668e54f6ed2c staging all files
-7d2989dc3d552738930dbca7029083e4b7c03376 staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -509,9 +511,9 @@ e3e27af1a9cee6d2af0cbecf9288668e54f6ed2c staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>dea131d Fri Mar 14 11:41:21 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>a3e774d Fri Mar 14 11:41:49 2014 -0400- staging all files [Alan Arnholt]
+dea131d Fri Mar 14 11:41:21 2014 -0400- staging all files [Alan Arnholt]
 e3e27af Fri Mar 14 11:39:58 2014 -0400- staging all files [Alan Arnholt]
-7d2989d Fri Mar 14 11:38:05 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -519,7 +521,13 @@ e3e27af Fri Mar 14 11:39:58 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>dea131d Fri Mar 14 11:41:21 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>a3e774d Fri Mar 14 11:41:49 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  1 +
+ Git/GitOne.html | 49 ++++++++++++++++++++++---------------------------
+ Git/GitOne.md   | 43 +++++++++++++++++++------------------------
+ 3 files changed, 42 insertions(+), 51 deletions(-)
+
+dea131d Fri Mar 14 11:41:21 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  | 11 +++--------
  Git/GitOne.html | 43 +++++++++++++++++++++----------------------
  Git/GitOne.md   | 37 ++++++++++++++++++-------------------
@@ -530,12 +538,6 @@ e3e27af Fri Mar 14 11:39:58 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html | 48 +++++++++++++++++++++++++++---------------------
  Git/GitOne.md   | 42 ++++++++++++++++++++++++------------------
  3 files changed, 52 insertions(+), 41 deletions(-)
-
-7d2989d Fri Mar 14 11:38:05 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |   8 ++-
- Git/GitOne.html |  59 +++++++++-------
- Git/GitOne.md   | 205 +++++++++++++++++++++++++++++++++++++++++++++++++++++++-
- 3 files changed, 244 insertions(+), 28 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
