--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 11:45:27.</p>
+<p>Last compiled Friday, March 14, 2014 - 11:55:34.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -338,7 +338,8 @@ the <code>Create repository</code> button, and your GitHub repository will be cr
 
 <p>Once you have your remote repository created on GitHub, you will need to create a local
 copy of the remote repository on your computer so that you can make changes locally. 
-It is possible to set up a local repository using the command line or using GUI (drop, drag, etc.) commands.  We will start by first looking at typed command then looking at a GUI interface for Git.   </p>
+It is possible to set up a local repository using the command line or using GUI (drop, drag, etc.) commands.  We start by first looking at typed commands then we examine a 
+GUI to Git.   </p>
 
 <p>Open either a Terminal (Mac) or Git Bash (Windows).<br/>
 Create a directory on your computer where you will store your copy of the GitHub 
@@ -378,7 +379,9 @@ to your machine, you will not need to initialize your directory.</p>
 
 <h3>Forking  a Repo</h3>
 
-<p>Another common way to clone a repo is my first &ldquo;forking&rdquo; someone else&#39;s repo.   Forking a repo creates a remote (GitHub) copy of the forked repo.   To work on the forked repo, you first must clone the remote fork to your local  machine.  When a repository is cloned, it has a default remote called <code>origin</code> that points to your fork on GitHub, not the original repository it was forked from.</p>
+<p>Another common way to clone a repo is my first &ldquo;forking&rdquo; someone else&#39;s repo.   Forking a repo creates a remote (GitHub) copy of the forked repo.   To work on the forked repo, you first must clone the remote fork to your local  machine.  When a repository is cloned, it has a default remote called <code>origin</code> that points to your fork on GitHub, not the original repository it was forked from.  This means that updates the orignal repo owner makes will not automatically be added to your forked repo.</p>
+
+<h3>How to&hellip;</h3>
 
 <h2>GUI appraoch with RStudio</h2>
 
@@ -403,15 +406,10 @@ to your machine, you will not need to initialize your directory.</p>
 Your branch is up-to-date with &#39;origin/master&#39;.
 
 Changes not staged for commit:
-  (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
+  (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
 
     modified:   GitOne.Rmd
-    modified:   GitOne.html
-    modified:   GitOne.md
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
@@ -426,8 +424,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 140f4f9] staging all files
- 3 files changed, 42 insertions(+), 39 deletions(-)
+<pre><code>[master 0b1af2b] staging all files
+ 1 file changed, 5 insertions(+), 2 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -439,15 +437,7 @@ git commit  -m &quot;staging all files&quot;
 Your branch is ahead of &#39;origin/master&#39; by 1 commit.
   (use &quot;git push&quot; to publish your local commits)
 
-Changes not staged for commit:
-  (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
-  (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
-
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
-
-no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
+nothing to commit, working directory clean
 </code></pre>
 
 <p>Push changes to the remote repository. </p>
@@ -463,15 +453,7 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code>On branch master
 Your branch is up-to-date with &#39;origin/master&#39;.
 
-Changes not staged for commit:
-  (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
-  (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
-
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
-    deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
-
-no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
+nothing to commit, working directory clean
 </code></pre>
 
 <p>Show the last three commits with</p>
@@ -479,21 +461,21 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 140f4f9854be0711954021ef46ea0ccd46211d59
+<pre><code>commit 0b1af2b28a0dbdf4009391460569a0411210b2df
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 11:55:34 2014 -0400
+
+    staging all files
+
+commit a945e366ae2a6cfeee2f042999069da99ed36c41
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 11:50:06 2014 -0400
+
+    push
+
+commit 140f4f9854be0711954021ef46ea0ccd46211d59
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:45:27 2014 -0400
-
-    staging all files
-
-commit c47158c8dfdab06338b214da0935dc4ce7890a8d
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 11:42:27 2014 -0400
-
-    staging all files
-
-commit a3e774d572f7bf02434a9eb5c62ed043ef5165eb
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 11:41:49 2014 -0400
 
     staging all files
 </code></pre>
@@ -503,9 +485,9 @@ Date:   Fri Mar 14 11:41:49 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>140f4f9854be0711954021ef46ea0ccd46211d59 staging all files
-c47158c8dfdab06338b214da0935dc4ce7890a8d staging all files
-a3e774d572f7bf02434a9eb5c62ed043ef5165eb staging all files
+<pre><code>0b1af2b28a0dbdf4009391460569a0411210b2df staging all files
+a945e366ae2a6cfeee2f042999069da99ed36c41 push
+140f4f9854be0711954021ef46ea0ccd46211d59 staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -513,9 +495,9 @@ a3e774d572f7bf02434a9eb5c62ed043ef5165eb staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>140f4f9 Fri Mar 14 11:45:27 2014 -0400- staging all files [Alan Arnholt]
-c47158c Fri Mar 14 11:42:27 2014 -0400- staging all files [Alan Arnholt]
-a3e774d Fri Mar 14 11:41:49 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>0b1af2b Fri Mar 14 11:55:34 2014 -0400- staging all files [Alan Arnholt]
+a945e36 Fri Mar 14 11:50:06 2014 -0400- push [Alan Arnholt]
+140f4f9 Fri Mar 14 11:45:27 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -523,23 +505,23 @@ a3e774d Fri Mar 14 11:41:49 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>140f4f9 Fri Mar 14 11:45:27 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>0b1af2b Fri Mar 14 11:55:34 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd | 7 +++++--
+ 1 file changed, 5 insertions(+), 2 deletions(-)
+
+a945e36 Fri Mar 14 11:50:06 2014 -0400- push [Alan Arnholt]
+ Git/GitOne.html                                    |  42 +++++++++++----------
+ Git/GitOne.md                                      |  37 +++++++++---------
+ ...ashCheck_3a4552886a749e14bd443de33a754ec2.RData | Bin 176 -&gt; 0 bytes
+ .../BashCheck_3a4552886a749e14bd443de33a754ec2.rdb |   0
+ .../BashCheck_3a4552886a749e14bd443de33a754ec2.rdx | Bin 113 -&gt; 0 bytes
+ 5 files changed, 42 insertions(+), 37 deletions(-)
+
+140f4f9 Fri Mar 14 11:45:27 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  3 +++
  Git/GitOne.html | 42 +++++++++++++++++++++---------------------
  Git/GitOne.md   | 36 ++++++++++++++++++------------------
  3 files changed, 42 insertions(+), 39 deletions(-)
-
-c47158c Fri Mar 14 11:42:27 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  2 +-
- Git/GitOne.html | 42 ++++++++++++++++++++++--------------------
- Git/GitOne.md   | 35 ++++++++++++++++++-----------------
- 3 files changed, 41 insertions(+), 38 deletions(-)
-
-a3e774d Fri Mar 14 11:41:49 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  1 +
- Git/GitOne.html | 49 ++++++++++++++++++++++---------------------------
- Git/GitOne.md   | 43 +++++++++++++++++++------------------------
- 3 files changed, 42 insertions(+), 51 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
