--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, March 16, 2014 - 05:48:06.</p>
+<p>Last compiled Sunday, March 16, 2014 - 06:59:05.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -275,7 +275,7 @@ git config --global color.ui true
 
 <p>To confirm your username and email, type <code>git config --list</code> at the $ prompt.</p>
 
-<pre><code class="bash">git config --list
+<pre><code class="bash">git config --list  #shows your configuration
 </code></pre>
 
 <pre><code>user.name=Alan Arnholt
@@ -284,6 +284,8 @@ push.default=simple
 credential.helper=osxkeychain
 filter.media.clean=git-media-clean %f
 filter.media.smudge=git-media-smudge %f
+color.ui=true
+core.editor=RStudio
 core.repositoryformatversion=0
 core.filemode=true
 core.bare=false
@@ -406,7 +408,15 @@ to your machine, you will not need to initialize your directory.</p>
 <pre><code>On branch master
 Your branch is up-to-date with &#39;origin/master&#39;.
 
-nothing to commit, working directory clean
+Changes not staged for commit:
+  (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
+  (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
+
+    modified:   GitOne.Rmd
+    modified:   GitOne.html
+    modified:   GitOne.md
+
+no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
 
 <p>The <code>git status</code> shows us what files are not staged for a commit.  Before files can be
@@ -419,10 +429,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>On branch master
-Your branch is up-to-date with &#39;origin/master&#39;.
-
-nothing to commit, working directory clean
+<pre><code>[master 6e0191d] staging all files
+ 3 files changed, 58 insertions(+), 72 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -431,7 +439,8 @@ nothing to commit, working directory clean
 </code></pre>
 
 <pre><code>On branch master
-Your branch is up-to-date with &#39;origin/master&#39;.
+Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+  (use &quot;git push&quot; to publish your local commits)
 
 nothing to commit, working directory clean
 </code></pre>
@@ -457,7 +466,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit ff27a5778f5deff49bbea94040bbc3b8edeb18b9
+<pre><code>commit 6e0191d50867ead5ff8eec3e2f7737769e3737ba
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 06:59:06 2014 -0400
+
+    staging all files
+
+commit ff27a5778f5deff49bbea94040bbc3b8edeb18b9
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:56:47 2014 -0400
 
@@ -468,12 +483,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 11:55:34 2014 -0400
 
     staging all files
-
-commit a945e366ae2a6cfeee2f042999069da99ed36c41
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 11:50:06 2014 -0400
-
-    push
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -481,9 +490,9 @@ Date:   Fri Mar 14 11:50:06 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>ff27a5778f5deff49bbea94040bbc3b8edeb18b9 latest changes
+<pre><code>6e0191d50867ead5ff8eec3e2f7737769e3737ba staging all files
+ff27a5778f5deff49bbea94040bbc3b8edeb18b9 latest changes
 0b1af2b28a0dbdf4009391460569a0411210b2df staging all files
-a945e366ae2a6cfeee2f042999069da99ed36c41 push
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -491,9 +500,9 @@ a945e366ae2a6cfeee2f042999069da99ed36c41 push
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
+<pre><code>6e0191d Sun Mar 16 06:59:06 2014 -0400- staging all files [Alan Arnholt]
+ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
 0b1af2b Fri Mar 14 11:55:34 2014 -0400- staging all files [Alan Arnholt]
-a945e36 Fri Mar 14 11:50:06 2014 -0400- push [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -501,7 +510,13 @@ a945e36 Fri Mar 14 11:50:06 2014 -0400- push [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
+<pre><code>6e0191d Sun Mar 16 06:59:06 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  4 ++--
+ Git/GitOne.html | 67 ++++++++++++++++++++++++++-------------------------------
+ Git/GitOne.md   | 59 ++++++++++++++++++++++----------------------------
+ 3 files changed, 58 insertions(+), 72 deletions(-)
+
+ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
  Git/GitOne.html | 92 +++++++++++++++++++++++----------------------------------
  Git/GitOne.md   | 86 +++++++++++++++++++++--------------------------------
  2 files changed, 71 insertions(+), 107 deletions(-)
@@ -509,14 +524,6 @@ a945e36 Fri Mar 14 11:50:06 2014 -0400- push [Alan Arnholt]
 0b1af2b Fri Mar 14 11:55:34 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd | 7 +++++--
  1 file changed, 5 insertions(+), 2 deletions(-)
-
-a945e36 Fri Mar 14 11:50:06 2014 -0400- push [Alan Arnholt]
- Git/GitOne.html                                    |  42 +++++++++++----------
- Git/GitOne.md                                      |  37 +++++++++---------
- ...ashCheck_3a4552886a749e14bd443de33a754ec2.RData | Bin 176 -&gt; 0 bytes
- .../BashCheck_3a4552886a749e14bd443de33a754ec2.rdb |   0
- .../BashCheck_3a4552886a749e14bd443de33a754ec2.rdx | Bin 113 -&gt; 0 bytes
- 5 files changed, 42 insertions(+), 37 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
