staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, March 16, 2014 - 07:12:28.</p>
+<p>Last compiled Sunday, March 16, 2014 - 07:16:53.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -348,7 +348,7 @@ GUI to Git.   </p>
 Create a directory on your computer where you will store your copy of the GitHub 
 (remote) repository.</p>
 
-<pre><code class="bash">mkdir ~/PathToYourLocalRepo
+<pre><code class="bash">mkdir ~/TestProject
 </code></pre>
 
 <p>The tilde (~) refers to your home directory.  In other words, <code>~/TestProject</code>
@@ -386,7 +386,7 @@ to your machine, you will not need to initialize your directory.</p>
 
 <p>Another common way to clone a repo is my first &ldquo;forking&rdquo; someone else&#39;s repo.   Forking a repo creates a remote (GitHub) copy of the forked repo.   To work on the forked repo, you first must clone the remote fork to your local  machine.  When a repository is cloned, it has a default remote called <code>origin</code> that points to your fork on GitHub, not the original repository it was forked from.  This means that updates the orignal repo owner makes will not automatically be added to your forked repo.</p>
 
-<h3>How to&hellip;</h3>
+<h3>How to pull in Upstream updates from a Forked Repo???</h3>
 
 <h2>GUI appraoch with RStudio</h2>
 
@@ -431,8 +431,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 108fa09] staging all files
- 3 files changed, 71 insertions(+), 54 deletions(-)
+<pre><code>[master df05b1b] staging all files
+ 3 files changed, 49 insertions(+), 40 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -468,7 +468,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 108fa092849c9b16c79a22f2479d98bf25d1161e
+<pre><code>commit df05b1b3880ecb023850565c7e886d47c621708e
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 07:16:54 2014 -0400
+
+    staging all files
+
+commit 108fa092849c9b16c79a22f2479d98bf25d1161e
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 07:12:28 2014 -0400
 
@@ -479,12 +485,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 06:59:06 2014 -0400
 
     staging all files
-
-commit ff27a5778f5deff49bbea94040bbc3b8edeb18b9
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 11:56:47 2014 -0400
-
-    latest changes
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -492,9 +492,9 @@ Date:   Fri Mar 14 11:56:47 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>108fa092849c9b16c79a22f2479d98bf25d1161e staging all files
+<pre><code>df05b1b3880ecb023850565c7e886d47c621708e staging all files
+108fa092849c9b16c79a22f2479d98bf25d1161e staging all files
 6e0191d50867ead5ff8eec3e2f7737769e3737ba staging all files
-ff27a5778f5deff49bbea94040bbc3b8edeb18b9 latest changes
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -502,9 +502,9 @@ ff27a5778f5deff49bbea94040bbc3b8edeb18b9 latest changes
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>108fa09 Sun Mar 16 07:12:28 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
+108fa09 Sun Mar 16 07:12:28 2014 -0400- staging all files [Alan Arnholt]
 6e0191d Sun Mar 16 06:59:06 2014 -0400- staging all files [Alan Arnholt]
-ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -512,7 +512,13 @@ ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>108fa09 Sun Mar 16 07:12:28 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  |  4 ++--
+ Git/GitOne.html | 46 +++++++++++++++++++++++++---------------------
+ Git/GitOne.md   | 39 ++++++++++++++++++++++-----------------
+ 3 files changed, 49 insertions(+), 40 deletions(-)
+
+108fa09 Sun Mar 16 07:12:28 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  7 +++++--
  Git/GitOne.html | 63 ++++++++++++++++++++++++++++++++-------------------------
  Git/GitOne.md   | 55 +++++++++++++++++++++++++++----------------------
@@ -523,11 +529,6 @@ ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
  Git/GitOne.html | 67 ++++++++++++++++++++++++++-------------------------------
  Git/GitOne.md   | 59 ++++++++++++++++++++++----------------------------
  3 files changed, 58 insertions(+), 72 deletions(-)
-
-ff27a57 Fri Mar 14 11:56:47 2014 -0400- latest changes [Alan Arnholt]
- Git/GitOne.html | 92 +++++++++++++++++++++++----------------------------------
- Git/GitOne.md   | 86 +++++++++++++++++++++--------------------------------
- 2 files changed, 71 insertions(+), 107 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
