staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, March 16, 2014 - 07:16:53.</p>
+<p>Last compiled Sunday, March 16, 2014 - 07:39:20.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -386,7 +386,23 @@ to your machine, you will not need to initialize your directory.</p>
 
 <p>Another common way to clone a repo is my first &ldquo;forking&rdquo; someone else&#39;s repo.   Forking a repo creates a remote (GitHub) copy of the forked repo.   To work on the forked repo, you first must clone the remote fork to your local  machine.  When a repository is cloned, it has a default remote called <code>origin</code> that points to your fork on GitHub, not the original repository it was forked from.  This means that updates the orignal repo owner makes will not automatically be added to your forked repo.</p>
 
-<h3>How to pull in Upstream updates from a Forked Repo???</h3>
+<p>To keep track of this repo, you need to add another remote named <code>upstream</code>.  This can be done by typing</p>
+
+<pre><code class="bash">git remote add upstream https://github.com/alanarnholt/STT4870.git
+</code></pre>
+
+<p>To pull in changes not present in your local repository, without modifying your
+files type</p>
+
+<pre><code class="bash">git fetch upstream  # you may need to add master after upstream
+</code></pre>
+
+<p>Another approach is to use</p>
+
+<pre><code class="bash">git pull upstream master
+</code></pre>
+
+<p>What is the difference?</p>
 
 <h2>GUI appraoch with RStudio</h2>
 
@@ -431,8 +447,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master df05b1b] staging all files
- 3 files changed, 49 insertions(+), 40 deletions(-)
+<pre><code>[master 00734e5] staging all files
+ 3 files changed, 64 insertions(+), 41 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -468,7 +484,13 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit df05b1b3880ecb023850565c7e886d47c621708e
+<pre><code>commit 00734e58d61a910217f14a72c0319afb1141d6ea
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 07:39:20 2014 -0400
+
+    staging all files
+
+commit df05b1b3880ecb023850565c7e886d47c621708e
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 07:16:54 2014 -0400
 
@@ -479,12 +501,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 07:12:28 2014 -0400
 
     staging all files
-
-commit 6e0191d50867ead5ff8eec3e2f7737769e3737ba
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Sun Mar 16 06:59:06 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -492,9 +508,9 @@ Date:   Sun Mar 16 06:59:06 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>df05b1b3880ecb023850565c7e886d47c621708e staging all files
+<pre><code>00734e58d61a910217f14a72c0319afb1141d6ea staging all files
+df05b1b3880ecb023850565c7e886d47c621708e staging all files
 108fa092849c9b16c79a22f2479d98bf25d1161e staging all files
-6e0191d50867ead5ff8eec3e2f7737769e3737ba staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -502,9 +518,9 @@ Date:   Sun Mar 16 06:59:06 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>00734e5 Sun Mar 16 07:39:20 2014 -0400- staging all files [Alan Arnholt]
+df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
 108fa09 Sun Mar 16 07:12:28 2014 -0400- staging all files [Alan Arnholt]
-6e0191d Sun Mar 16 06:59:06 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -512,7 +528,13 @@ Date:   Sun Mar 16 06:59:06 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>00734e5 Sun Mar 16 07:39:20 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  | 23 ++++++++++++++++++++++-
+ Git/GitOne.html | 45 +++++++++++++++++++++++----------------------
+ Git/GitOne.md   | 37 +++++++++++++++++++------------------
+ 3 files changed, 64 insertions(+), 41 deletions(-)
+
+df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.Rmd  |  4 ++--
  Git/GitOne.html | 46 +++++++++++++++++++++++++---------------------
  Git/GitOne.md   | 39 ++++++++++++++++++++++-----------------
@@ -523,12 +545,6 @@ Date:   Sun Mar 16 06:59:06 2014 -0400
  Git/GitOne.html | 63 ++++++++++++++++++++++++++++++++-------------------------
  Git/GitOne.md   | 55 +++++++++++++++++++++++++++----------------------
  3 files changed, 71 insertions(+), 54 deletions(-)
-
-6e0191d Sun Mar 16 06:59:06 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  4 ++--
- Git/GitOne.html | 67 ++++++++++++++++++++++++++-------------------------------
- Git/GitOne.md   | 59 ++++++++++++++++++++++----------------------------
- 3 files changed, 58 insertions(+), 72 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
