--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, March 16, 2014 - 07:42:58.</p>
+<p>Last compiled Sunday, March 16, 2014 - 08:24:02.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -397,6 +397,9 @@ files type</p>
 <pre><code class="bash">git fetch upstream  # you may need to add master after upstream
 </code></pre>
 
+<p>When you fetch the upstream repository,  the upstream branches are stored
+in your local repository in a local branch named <code>upstream/master</code>.  Next, we need to merge the changes into our local branch to bring our local branch in sync with the upstream branch without losing any local changes.  Make sure you are on the master branch by typing <code>git checkout master</code>.  Then, enter <code>git merge upstream/master</code>.  Once your local branch is in sync with the upstream remote, you will want to push your local changes back to your forked repo on GitHub by typing <code>git push</code>. </p>
+
 <p>Another approach is to use</p>
 
 <pre><code class="bash">git pull upstream master
@@ -430,8 +433,7 @@ Changes not staged for commit:
   (use &quot;git add &lt;file&gt;...&quot; to update what will be committed)
   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
 
-    modified:   GitOne.html
-    modified:   GitOne.md
+    modified:   GitOne.Rmd
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
@@ -446,8 +448,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master 423031f] staging all files
- 2 files changed, 82 insertions(+), 39 deletions(-)
+<pre><code>[master c6c2236] staging all files
+ 1 file changed, 3 insertions(+)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -483,21 +485,21 @@ nothing to commit, working directory clean
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit 423031f3a985b3dd4119f0544f8ffdd93b644f5d
+<pre><code>commit c6c2236c2e95400c84f116a2a7150b296347769e
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 08:24:02 2014 -0400
+
+    staging all files
+
+commit 4d033f91e034347edbe519dfc9628e00ae456513
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Sun Mar 16 07:43:27 2014 -0400
+
+    time changes
+
+commit 423031f3a985b3dd4119f0544f8ffdd93b644f5d
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Sun Mar 16 07:42:59 2014 -0400
-
-    staging all files
-
-commit 00734e58d61a910217f14a72c0319afb1141d6ea
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Sun Mar 16 07:39:20 2014 -0400
-
-    staging all files
-
-commit df05b1b3880ecb023850565c7e886d47c621708e
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Sun Mar 16 07:16:54 2014 -0400
 
     staging all files
 </code></pre>
@@ -507,9 +509,9 @@ Date:   Sun Mar 16 07:16:54 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>423031f3a985b3dd4119f0544f8ffdd93b644f5d staging all files
-00734e58d61a910217f14a72c0319afb1141d6ea staging all files
-df05b1b3880ecb023850565c7e886d47c621708e staging all files
+<pre><code>c6c2236c2e95400c84f116a2a7150b296347769e staging all files
+4d033f91e034347edbe519dfc9628e00ae456513 time changes
+423031f3a985b3dd4119f0544f8ffdd93b644f5d staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -517,9 +519,9 @@ df05b1b3880ecb023850565c7e886d47c621708e staging all files
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>423031f Sun Mar 16 07:42:59 2014 -0400- staging all files [Alan Arnholt]
-00734e5 Sun Mar 16 07:39:20 2014 -0400- staging all files [Alan Arnholt]
-df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
+4d033f9 Sun Mar 16 07:43:27 2014 -0400- time changes [Alan Arnholt]
+423031f Sun Mar 16 07:42:59 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -527,22 +529,19 @@ df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>423031f Sun Mar 16 07:42:59 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>c6c2236 Sun Mar 16 08:24:02 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd | 3 +++
+ 1 file changed, 3 insertions(+)
+
+4d033f9 Sun Mar 16 07:43:27 2014 -0400- time changes [Alan Arnholt]
+ Git/GitOne.html | 40 +++++++++++++++++++---------------------
+ Git/GitOne.md   | 34 ++++++++++++++++------------------
+ 2 files changed, 35 insertions(+), 39 deletions(-)
+
+423031f Sun Mar 16 07:42:59 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html | 58 +++++++++++++++++++++++++++++++++-------------------
  Git/GitOne.md   | 63 ++++++++++++++++++++++++++++++++++++++++-----------------
  2 files changed, 82 insertions(+), 39 deletions(-)
-
-00734e5 Sun Mar 16 07:39:20 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  | 23 ++++++++++++++++++++++-
- Git/GitOne.html | 45 +++++++++++++++++++++++----------------------
- Git/GitOne.md   | 37 +++++++++++++++++++------------------
- 3 files changed, 64 insertions(+), 41 deletions(-)
-
-df05b1b Sun Mar 16 07:16:54 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  4 ++--
- Git/GitOne.html | 46 +++++++++++++++++++++++++---------------------
- Git/GitOne.md   | 39 ++++++++++++++++++++++-----------------
- 3 files changed, 49 insertions(+), 40 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
